# clepho

./: .gitignore  Cargo.toml  README.md  clepho.service  config.example.toml  cross-platform-support.md  flake.nix
docs/: ARCHITECTURE.md  IMPLEMENTATION.md  README.md  ai-features.md  centralise.md  change-detection.md  configuration.md  database.md  duplicates.md  export.md  faces.md  file-operations.md  installation.md  keyboard-shortcuts.md  navigation.md  running.md  scanning.md  scheduling.md  trash.md
src/: app.rs  config.rs  lib.rs  logging.rs  main.rs
src/centralise/: mod.rs
src/clip/: mod.rs  model.rs
src/db/: albums.rs  backend.rs  embeddings.rs  faces.rs  migrate.rs  mod.rs  postgres.rs  postgres_schema.rs  schedule.rs  schema.rs  similarity.rs  sqlite.rs  trash.rs
src/export/: mod.rs
src/faces/: clustering.rs  detector.rs  mod.rs  processor.rs
src/llm/: client.rs  mod.rs  provider.rs  queue.rs
src/scanner/: change_detection.rs  discovery.rs  hashing.rs  metadata.rs  mod.rs  thumbnails.rs
src/schedule/: mod.rs
src/tasks/: manager.rs  mod.rs
src/trash/: mod.rs
src/ui/: browser.rs  centralise_dialog.rs  changes_dialog.rs  confirm_dialog.rs  dialogs.rs  duplicates.rs  edit_dialog.rs  export_dialog.rs  gallery.rs  mod.rs  move_dialog.rs  overdue_dialog.rs  people_dialog.rs  preview.rs  rename_dialog.rs  schedule_dialog.rs  search_dialog.rs  settings_dialog.rs  slideshow.rs  status_bar.rs  tag_dialog.rs  task_list_dialog.rs  trash_dialog.rs
