[package]
name = "clepho"
version = "0.1.0"
edition = "2021"
description = "A TUI photo management application"
authors = ["Clepho Authors"]

[[bin]]
name = "clepho"
path = "src/main.rs"

[[bin]]
name = "clepho-daemon"
path = "src/bin/daemon.rs"

[dependencies]
# TUI
ratatui = "0.29"
crossterm = "0.28"

# Async runtime
tokio = { version = "1", features = ["full"] }

# Database
rusqlite = { version = "0.32", features = ["bundled"] }

# Image processing
image = "0.25"
kamadak-exif = "0.5"
img_hash = "3.2"

# Face detection and recognition (ONNX Runtime)
# Use load-dynamic for Nix builds, download-binaries for regular builds
ort = { version = "2.0.0-rc.11", default-features = false, features = ["load-dynamic"] }
ndarray = "0.16"

# Hashing
md-5 = "0.10"
sha2 = "0.10"

# HTTP client for LLM
ureq = { version = "2", features = ["json"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"

# File system
walkdir = "2"

# Error handling
anyhow = "1"
thiserror = "2"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"

[target.'cfg(target_os = "linux")'.dependencies]
tracing-journald = "0.3"

# Directories
dirs = "5"

# DateTime handling
chrono = { version = "0.4", features = ["serde"] }

# Parallel processing
rayon = "1.10"

# Base64 for image encoding
base64 = "0.22"

# Terminal image rendering
ratatui-image = "3"

# Export functionality
csv = "1"

[dev-dependencies]
tempfile = "3"
